# escpos-printer-emulator

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/screenshots/: README.md
src/: main.rs
src/emulator/: mod.rs
src/escpos/: parser.rs  printer.rs
src/gui/: app.rs  command_log.rs  mod.rs  receipt_viewer.rs  settings_panel.rs  theme.rs
src/networking/: server.rs
